fix(tabela de posts): define o overflow-x da página como hidden

--- a/public/css/tabelaPosts.css
+++ b/public/css/tabelaPosts.css
@@ -70,15 +70,13 @@
 #tbposts{
     padding: 0 2rem 4rem 0;
     min-height: 100vh;
-
-   
     background: linear-gradient(
         #6D3534 39%, 
         #9A4E45 75%,
         #C66E57 94%,
         #E08E6D 100%
     );
-    
+    overflow-x: hidden;
 }
 .pagecontainer{
     /* display: flex;
